// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSRadioButtonGroup Base 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <h1
      className="slds-text-title_caps slds-p-vertical_medium"
    >
      Base
    </h1>
    <fieldset
      className="slds-form-element"
    >
      <legend
        className="slds-form-element__legend slds-form-element__label"
      >
        Day of week
      </legend>
      <div
        className="slds-form-element__control"
      >
        <div
          className="slds-radio_button-group"
        >
          <span
            className="slds-button slds-radio_button"
          >
            <input
              checked={false}
              id="Mon"
              name="radio-button-group-name"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Mon"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Mon"
            >
              <span
                className="slds-radio_faux"
              >
                Mon
              </span>
            </label>
          </span>
          <span
            className="slds-button slds-radio_button"
          >
            <input
              checked={true}
              id="Tue"
              name="radio-button-group-name"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Tue"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Tue"
            >
              <span
                className="slds-radio_faux"
              >
                Tue
              </span>
            </label>
          </span>
          <span
            className="slds-button slds-radio_button"
          >
            <input
              checked={false}
              id="Wed"
              name="radio-button-group-name"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Wed"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Wed"
            >
              <span
                className="slds-radio_faux"
              >
                Wed
              </span>
            </label>
          </span>
          <span
            className="slds-button slds-radio_button"
          >
            <input
              checked={false}
              id="Thu"
              name="radio-button-group-name"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Thu"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Thu"
            >
              <span
                className="slds-radio_faux"
              >
                Thu
              </span>
            </label>
          </span>
          <span
            className="slds-button slds-radio_button"
          >
            <input
              checked={false}
              id="Fri"
              name="radio-button-group-name"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Fri"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Fri"
            >
              <span
                className="slds-radio_faux"
              >
                Fri
              </span>
            </label>
          </span>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`DOM snapshots SLDSRadioButtonGroup Disabled 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <h1
      className="slds-text-title_caps slds-p-vertical_medium"
    >
      Disabled
    </h1>
    <fieldset
      className="slds-form-element"
    >
      <legend
        className="slds-form-element__legend slds-form-element__label"
      >
        Day of week
      </legend>
      <div
        className="slds-form-element__control"
      >
        <div
          className="slds-radio_button-group"
        >
          <span
            className="slds-button slds-radio_button"
          >
            <input
              checked={false}
              disabled={true}
              id="Mon"
              name="radio-button-group-name"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Mon"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Mon"
            >
              <span
                className="slds-radio_faux"
              >
                Mon
              </span>
            </label>
          </span>
          <span
            className="slds-button slds-radio_button"
          >
            <input
              checked={true}
              disabled={true}
              id="Tue"
              name="radio-button-group-name"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Tue"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Tue"
            >
              <span
                className="slds-radio_faux"
              >
                Tue
              </span>
            </label>
          </span>
          <span
            className="slds-button slds-radio_button"
          >
            <input
              checked={false}
              disabled={true}
              id="Wed"
              name="radio-button-group-name"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Wed"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Wed"
            >
              <span
                className="slds-radio_faux"
              >
                Wed
              </span>
            </label>
          </span>
          <span
            className="slds-button slds-radio_button"
          >
            <input
              checked={false}
              disabled={true}
              id="Thu"
              name="radio-button-group-name"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Thu"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Thu"
            >
              <span
                className="slds-radio_faux"
              >
                Thu
              </span>
            </label>
          </span>
          <span
            className="slds-button slds-radio_button"
          >
            <input
              checked={false}
              disabled={true}
              id="Fri"
              name="radio-button-group-name"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Fri"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Fri"
            >
              <span
                className="slds-radio_faux"
              >
                Fri
              </span>
            </label>
          </span>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`DOM snapshots SLDSRadioButtonGroup Docs site Base 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <fieldset
      className="slds-form-element"
    >
      <legend
        className="slds-form-element__legend slds-form-element__label"
      >
        Day of week
      </legend>
      <div
        className="slds-form-element__control"
      >
        <div
          className="slds-radio_button-group"
        >
          <span
            className="slds-button slds-radio_button"
          >
            <input
              checked={false}
              id="Mon"
              name="doc-site-base"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Mon"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Mon"
            >
              <span
                className="slds-radio_faux"
              >
                Mon
              </span>
            </label>
          </span>
          <span
            className="slds-button slds-radio_button"
          >
            <input
              checked={true}
              id="Tue"
              name="doc-site-base"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Tue"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Tue"
            >
              <span
                className="slds-radio_faux"
              >
                Tue
              </span>
            </label>
          </span>
          <span
            className="slds-button slds-radio_button"
          >
            <input
              checked={false}
              id="Wed"
              name="doc-site-base"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Wed"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Wed"
            >
              <span
                className="slds-radio_faux"
              >
                Wed
              </span>
            </label>
          </span>
          <span
            className="slds-button slds-radio_button"
          >
            <input
              checked={false}
              id="Thu"
              name="doc-site-base"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Thu"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Thu"
            >
              <span
                className="slds-radio_faux"
              >
                Thu
              </span>
            </label>
          </span>
          <span
            className="slds-button slds-radio_button"
          >
            <input
              checked={false}
              id="Fri"
              name="doc-site-base"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Fri"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Fri"
            >
              <span
                className="slds-radio_faux"
              >
                Fri
              </span>
            </label>
          </span>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`DOM snapshots SLDSRadioButtonGroup Error 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <h1
      className="slds-text-title_caps slds-p-vertical_medium"
    >
      Error
    </h1>
    <fieldset
      className="slds-form-element slds-has-error"
    >
      <legend
        className="slds-form-element__legend slds-form-element__label"
      >
        Day of week
      </legend>
      <div
        className="slds-form-element__control"
      >
        <div
          className="slds-radio_button-group"
        >
          <span
            className="slds-button slds-radio_button"
          >
            <input
              aria-describedby="error-id"
              checked={false}
              id="Mon"
              name="radio-button-group-name"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Mon"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Mon"
            >
              <span
                className="slds-radio_faux"
              >
                Mon
              </span>
            </label>
          </span>
          <span
            className="slds-button slds-radio_button"
          >
            <input
              aria-describedby="error-id"
              checked={true}
              id="Tue"
              name="radio-button-group-name"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Tue"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Tue"
            >
              <span
                className="slds-radio_faux"
              >
                Tue
              </span>
            </label>
          </span>
          <span
            className="slds-button slds-radio_button"
          >
            <input
              aria-describedby="error-id"
              checked={false}
              id="Wed"
              name="radio-button-group-name"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Wed"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Wed"
            >
              <span
                className="slds-radio_faux"
              >
                Wed
              </span>
            </label>
          </span>
          <span
            className="slds-button slds-radio_button"
          >
            <input
              aria-describedby="error-id"
              checked={false}
              id="Thu"
              name="radio-button-group-name"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Thu"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Thu"
            >
              <span
                className="slds-radio_faux"
              >
                Thu
              </span>
            </label>
          </span>
          <span
            className="slds-button slds-radio_button"
          >
            <input
              aria-describedby="error-id"
              checked={false}
              id="Fri"
              name="radio-button-group-name"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Fri"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Fri"
            >
              <span
                className="slds-radio_faux"
              >
                Fri
              </span>
            </label>
          </span>
        </div>
        <div
          className="slds-form-element__help"
          id="error-id"
        >
          There is an error
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`DOM snapshots SLDSRadioButtonGroup Required 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <h1
      className="slds-text-title_caps slds-p-vertical_medium"
    >
      Required
    </h1>
    <fieldset
      className="slds-form-element"
    >
      <legend
        className="slds-form-element__legend slds-form-element__label"
      >
        <abbr
          className="slds-required"
          title="required"
        >
          *
          <div
            className="slds-assistive-text"
          >
            Required
             
          </div>
        </abbr>
        Day of week
      </legend>
      <div
        className="slds-form-element__control"
      >
        <div
          className="slds-radio_button-group"
        >
          <span
            className="slds-button slds-radio_button"
          >
            <input
              checked={false}
              id="Mon"
              name="radio-button-group-name"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Mon"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Mon"
            >
              <span
                className="slds-radio_faux"
              >
                Mon
              </span>
            </label>
          </span>
          <span
            className="slds-button slds-radio_button"
          >
            <input
              checked={true}
              id="Tue"
              name="radio-button-group-name"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Tue"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Tue"
            >
              <span
                className="slds-radio_faux"
              >
                Tue
              </span>
            </label>
          </span>
          <span
            className="slds-button slds-radio_button"
          >
            <input
              checked={false}
              id="Wed"
              name="radio-button-group-name"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Wed"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Wed"
            >
              <span
                className="slds-radio_faux"
              >
                Wed
              </span>
            </label>
          </span>
          <span
            className="slds-button slds-radio_button"
          >
            <input
              checked={false}
              id="Thu"
              name="radio-button-group-name"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Thu"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Thu"
            >
              <span
                className="slds-radio_faux"
              >
                Thu
              </span>
            </label>
          </span>
          <span
            className="slds-button slds-radio_button"
          >
            <input
              checked={false}
              id="Fri"
              name="radio-button-group-name"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              type="radio"
              value="Fri"
            />
            <label
              className="slds-radio_button__label"
              htmlFor="Fri"
            >
              <span
                className="slds-radio_faux"
              >
                Fri
              </span>
            </label>
          </span>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;
